# vivli-amr-changing-world

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  NOTICE.md  README.md  app.py  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
config/: country_crosswalk.csv  data_manifest.yml  livestock_groups.yml  pathogen_drug_matrix.yml  phase3_lock.yml  project.yml  rd_keyword_map.yml
data/: README.md
data/dashboard/: README.md  SHA256SUMS  change_point_candidates.parquet  country_trends.parquet  coverage_summary.parquet  data_availability.parquet  endpoint_coverage.parquet  lag_associations.parquet  one_health_country_year.parquet  pooled_annual_trends.parquet  rd_annual_portfolio.parquet  rd_country_year.parquet
docs/: deployment_record.md  phase2_data_contract.md  phase2_run_report.md  phase3_run_report.md  phase4_run_report.md  phase5_run_report.md  phase6_run_report.md  phase7_run_report.md  phase8b_run_report.md  phase8c_run_report.md  phase8d_run_report.md
pages/: 0_Home.py  1_Global_AMR.py  2_Conflict_and_AMR.py  3_One_Health.py  4_RD_Alignment.py  5_Country_Profile.py  6_Methods_and_Data_Quality.py
scripts/: build_phase4_report.py  build_phase4_workbook.mjs  build_phase5_report.py  build_phase5_workbook.mjs  validate_release.py
tests/: test_acled.py  test_countries.py  test_dashboard.py  test_disclosure.py  test_mic.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase8.py  test_phase8_analysis.py  test_release.py  test_visual_contract.py
(+22 files in other folders)
