[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amr-changing-world"
version = "0.7.0"
description = "Reproducible data pipeline for longitudinal human AMR, conflict, One Health determinants, and R&D investment."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Neha Nityadarshini"}]
dependencies = [
  "numpy>=1.26,<3",
  "openpyxl>=3.1,<4",
  "pandas>=2.2,<3",
  "PyYAML>=6.0,<7",
  "pyarrow>=17,<22",
  "scipy>=1.13,<2",
  "statsmodels>=0.14.6,<0.15",
  "matplotlib>=3.8,<4",
  "python-docx>=1.1,<2",
  "plotly>=5.24,<7",
  "streamlit>=1.41,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.9,<1",
]

[project.scripts]
amr-pipeline = "amr_changing_world.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
